# youtrack-rs

./: Cargo.toml
src/: bin.rs  client.rs  errors.rs  lib.rs  macros.rs  util.rs
src/admin/: get.rs  mod.rs
src/admin/custom_field_settings/: get.rs  mod.rs
src/admin/custom_field_settings/bundles/: get.rs
src/admin/custom_field_settings/custom_field/: get.rs
src/admin/custom_field_settings/types/: get.rs
src/admin/projects/: get.rs  mod.rs
src/issues/: get.rs  post.rs
src/users/: get.rs
