[package]
name = "youtrack-rs"
version = "0.2.0"
authors = ["Vladislav Bortnikov <bortnikov.vladislav@e-sakha.ru>"]
edition = "2018"
description = "Pure Rust bindings to the YouTrack API"
license = "MIT"

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
hyper = "0.13"
hyper-rustls = { version="0.19", optional = true }
hyper-tls = { version = "0.4", optional = true }
native-tls = { version = "0.2", optional = true }
error-chain = "0.12"
tokio = "0.2"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
serde_derive = "1.0"
