[package]
name = "youtrack-rs"
version = "0.2.5"
authors = ["Vladislav Bortnikov <bortnikov.vladislav@e-sakha.ru>"]
edition = "2018"
description = "Pure Rust bindings to the YouTrack API"
license = "MIT"

[lib]
name = "youtrack_rs"
path = "src/lib.rs"

[[bin]]
name = "youtrack"
path = "src/bin.rs"

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
hyper = "0.13"
hyper-rustls = { version="0.19", optional = true }
hyper-tls = { version = "0.4", optional = true }
native-tls = { version = "0.2", optional = true }
error-chain = "0.12"
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
structopt = "0.3"

[dev-dependencies]
serde_derive = "1.0"
